.metadata/.plugins/org.eclipse.cdt.ui/035.bus_stops.build.log
20:26:40 **** Incremental Build of configuration Debug for project 035.bus_stops ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp: In function ‘void process_cli_input(std::vector<cli_input_element>&)’:
../main.cpp:154:32: error: ‘struct cli_input_element’ has no member named ‘second’
   processing_element = element.second;
                                ^
make: *** [main.o] Error 1
subdir.mk:18: recipe for target 'main.o' failed

20:26:41 Build Finished (took 842ms)

